Reduce overlap stroke-width to avoid artefacts where fields meet

--- a/main/css/styles.css
+++ b/main/css/styles.css
@@ -33,7 +33,7 @@ fieldset select {
 }
 
 mask path.overlap {
-  stroke-width: 1;
+  stroke-width: 0.1;
   fill: none;
   stroke: #fff;
 }
